# mechforge

./: .env  .env.example  .gitignore  CLAUDE.md  DEV_LOG.md  INSTALL.md  LICENSE  MANIFEST.in  Makefile  MechForgeAI.spec  OPTIMIZATION.md  QWEN.md  README.md  __init__.py  build.bat  build_gui_light.py  config.yaml.example  daily_feed.json  daily_history.json  desktop_app.py  docker-compose.yml  docker-start.bat  download_model.py  experience.css  install.py  mcp_config.json  mechforge-k.bat  pyproject.toml  requirements-dev.txt  requirements.txt  server.py  setup_env.sh  start.sh  styles-modular.css  sw.js  temp_doc_content.txt  test_mcp_chrome.py  wwwww.html
gui_pywebview/: .dockerignore  .editorconfig  .env.example  .eslintrc.json  .gitignore  .prettierrc  .stylelintrc.json  DEV_LOG.md  Dockerfile  MechForge.spec  OPTIMIZATION_REPORT.md  OPTIMIZATION_SUMMARY.md  PACKAGING_GUIDE.md  PACKAGING_SUMMARY.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v0.4.1.md  activate.bat  activate.sh  build.py  build_complete.py  build_optimized.py  check_env.py  config.yaml  daily_agent.py  daily_feed_ui.js  desktop_app.py  docker-start.sh  experience.js  index.html  mechforge-ai.bat  mechforge-work.bat  package.json  requirements.txt  ruff.toml  server.py  setup.cfg  setup_env.bat  start.bat  styles-modular.css  (+1 more)
gui_pywebview/.github/: dependabot.yml  pull_request_template.md
gui_pywebview/.github/ISSUE_TEMPLATE/: feature_request.md
gui_pywebview/.qwen/skills/tdd/: SKILL.md
gui_pywebview/api/: __init__.py  cae.py  chat.py  config.py  deps.py  errors.py  gguf.py  health.py  model_downloader.py  obsidian.py  obsidian_sync.py  rag.py  state.py
gui_pywebview/app/: main.js
gui_pywebview/app/cae/: cae-panel.html  cae-panel.js
gui_pywebview/app/chat/: chat-features.js  chat-panel.html  chat-panel.js  model-switcher.js
gui_pywebview/app/components/: card.js  index.js  input.js
gui_pywebview/app/experience/: experience-panel.html  experience-panel.js
gui_pywebview/app/knowledge/: knowledge-panel.html  knowledge-panel.js  knowledge-ui.js
gui_pywebview/app/layout/: sidebar.js
gui_pywebview/app/settings/: api-switcher.js  model-download.js  settings-panel.html  settings-panel.js  status-bar.js
gui_pywebview/app/ui/: mascot.js  mode-indicator.js  particles.js  window-control.js
gui_pywebview/core/: animation-engine.js  api-client.js  debounce-throttle.js  error-handler.js  logger.js  markdown.js  modal-manager.js  notification-manager.js  performance-monitor.js  storage.js  store.js  utils.js
gui_pywebview/css/: chat-markdown.css  chat.css  components.css  experience.css  industrial-theme.css  knowledge.css  layout.css  mode-indicator.css  panels.css  settings.css  variables.css
gui_pywebview/dist_frontend/api/: chat.py  gguf.py  rag.py  state.py
gui_pywebview/dist_frontend/app/chat/: chat-features.js
gui_pywebview/dist_frontend/app/settings/: api-switcher.js  settings-panel.js
gui_pywebview/dist_frontend/app/ui/: mascot.js
gui_pywebview/dist_frontend/core/: error-handler.js  performance-optimizer.js  sw-register.js
gui_pywebview/dist_frontend/css/: components.css  effects.css  layout.css  panels.css
gui_pywebview/dist_frontend/services/: ai-service.js
gui_pywebview/docs/: OPTIMIZATION_2026-03-16.md
gui_pywebview/examples/: reflection_demo.py
gui_pywebview/gui/: IMPLEMENTATION.md  QUICKSTART.md  README.md  SPEC.md  START_HERE.md  app.js  index.html  requirements-desktop.txt  requirements.txt  server.py  server_config.yaml  start.bat  start.sh  start_gui.bat  start_gui.sh  styles.css  test_server.py
gui_pywebview/gui/core/: event-bus.js
gui_pywebview/gui/services/: ai-service.js
gui_pywebview/gui_pywebview/: .env.example  .gitmessage  DEV_LOG.md  build.py  build_frontend.py  config.py  package-lock.json  pyproject.toml  requirements.txt
gui_pywebview/gui_pywebview/.github/ISSUE_TEMPLATE/: bug_report.md
gui_pywebview/gui_pywebview/.github/workflows/: release.yml
gui_pywebview/gui_pywebview/api/: chat.py
gui_pywebview/gui_pywebview/app/chat/: chat-ui.js
gui_pywebview/gui_pywebview/app/components/: button.js
gui_pywebview/gui_pywebview/app/settings/: settings-panel.js
gui_pywebview/gui_pywebview/core/: dom-utils.js  i18n.js  notification-manager.js  theme.js
gui_pywebview/gui_pywebview/css/: variables.css
gui_pywebview/gui_pywebview/dist_frontend/: experience.js  index.html
gui_pywebview/gui_pywebview/dist_frontend/api/: __init__.py  config.py
gui_pywebview/gui_pywebview/installer/: setup.iss
gui_pywebview/gui_pywebview/scripts/: check-deps.js  code-quality.js  setup.py
gui_pywebview/gui_pywebview/services/: ai-service.js
gui_pywebview/hooks/: hook-llama_cpp.py
gui_pywebview/knowledge/: 有限元分析入门.md  材料力学.md
gui_pywebview/mechforge_ai/: __init__.py  command_handler.py  llm_client.py  rag_engine.py  terminal.py
gui_pywebview/mechforge_core/: cache.py  config.py  database.py  security.py
gui_pywebview/mechforge_core/mcp/: README.md  client.py  tools.py
gui_pywebview/mechforge_core/reflection/: __init__.py  engine.py  experience_db.py  integration.py
gui_pywebview/mechforge_gui_ai/: app.py  build_gui.py  dialogs.py  mechforge_gui.spec  theme.py
gui_pywebview/mechforge_knowledge/: model_cache.py  rag.py
gui_pywebview/mechforge_knowledge/backends/: __init__.py
gui_pywebview/mechforge_theme/: components.py  styles.py
gui_pywebview/mechforge_web/: __init__.py  middleware.py  security_config.py
gui_pywebview/mechforge_work/: README.md  __init__.py
gui_pywebview/models/: README.md
gui_pywebview/scripts/: analyze-bundle.js  create_installer.bat  debug-loader.js  run_knowledge.py
gui_pywebview/services/: ai-service.js
gui_pywebview/tests/: conftest.py  fixtures.py  test_api.py  test_core_features.py
gui_pywebview/tests/unit/: test_rag_engine.py
gui_pywebview/tool/: mechforge_tool_v1.py  mechforge_tool_v2.py
gui_pywebview/tool/React/: MechForgeUI.jsx  pasted_code.jsx
gui_pywebview/types/: index.d.ts
gui_pywebview/开发日志/: 2026-03-08_GUI_AI_实现总结.md  CHANGELOG.md  DEV_LOG.md  MechForge项目分析与推广.docx
(+150 files in other folders)
