# MechForge AI - Setup Configuration

[metadata]
name = mechforge-ai
version = 0.5.0
author = MechForge Team
author_email = mechforge@example.com
description = Mechanical Engineer's Local AI Workbench
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yd5768365-hue/mechforge
project_urls =
    Bug Tracker = https://github.com/yd5768365-hue/mechforge/issues
    Documentation = https://mechforge.ai
    Source Code = https://github.com/yd5768365-hue/mechforge
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Manufacturing
    Topic :: Scientific/Engineering :: Mechanical Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent
    Environment :: Console
    Environment :: Web Environment
keywords = mechanical engineering, ai, cad, cae, fem, llm, rag, mcp

[options]
python_requires = >=3.10
zip_safe = False

[options.packages.find]
where = packages
include = mechforge_*

[options.package_data]
* = *.yaml, *.json, *.md, *.txt

[options.entry_points]
console_scripts =
    mechforge = mechforge_ai.terminal:main
    mechforge-k = mechforge_knowledge.cli:main
    mechforge-work = mechforge_work.work_cli:main
    mechforge-web = mechforge_web.main:main
    mechforge-model = mechforge_ai.model_cli:main

[bdist_wheel]
universal = 0

[flake8]
max-line-length = 100
exclude =
    .git,
    __pycache__,
    build,
    dist,
    *.egg-info

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = -v --tb=short
